fix: Don't actually hide all JP labels on mobile

--- a/src/components/JourneyPicker/JourneyPicker.module.scss
+++ b/src/components/JourneyPicker/JourneyPicker.module.scss
@@ -103,6 +103,9 @@
     color: white;
     margin: 0 10px;
     white-space: nowrap;
+}
+
+.labelHiddenOnMobile {
     @include mobile {
         display: none;
     }
